# tauri-mcp

./: .gitignore  .jscpd.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rustfmt.toml  spec.md  tasks.md
docs/: style-guide.md  testing-guide.md
scripts/: check-all.sh
tests/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
tests/integration/: console.test.ts  dom.test.ts  execute-js.test.ts  interact.test.ts  multi-window.test.ts  screenshot.test.ts  setup.ts  wait-for.test.ts  window.test.ts
